src/main/java/antlr/test/fail/undeclared_var_2.go
package main

func main() {
    var tst = 12
}
func foo() {
    var tst = 12
    var b = 12
    b = a
}
